# pythia

./: .envrc  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  flake.nix  pyproject.toml  readme.md
pythia/: __init__.py  __main__.py  util.py
pythia/tables/: __init__.py  badevank.py  template.py
src/pythia/: __init__.py  __main__.py  util.py
src/pythia/tables/: pyt.py
src/pythiarg/: __init__.py  __main__.py
src/pythiarg/tables/: badevank.py  pyt.py  template.py
