[build-system]
requires = ["setuptools >= 61.0", "setuptools_scm>=8", "twine"]
build-backend = "setuptools.build_meta"

[project]
name = "pythiarg"
dynamic = ["version"]
description = "Random generator for rpgs and the sort."
readme = "README.md"
# license = {file = "LICENSE"}
license = {text = "MIT License"}
requires-python = ">=3.12,<3.13"
keywords = [
    "pythia",
    "oracle",
    "dnd",
    "trpg",
    "ttrpg",
    "generator",
    "random generator",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: English",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = []
authors = [
  {name = "Todd Sonjiku", email = "dev.50nj1ku@erine.email"},
]
maintainers = [
  {name = "Todd Sonjiku", email = "dev.50nj1ku@erine.email"},
]

# [project.optional-dependancies]
# gui = ["PyQt5"]
# cli = [
#   "rich",
#   "click",
# ]


[project.urls]
"Homepage" = "https://github.com/sonjiku/pythiarg"
"Documentation" = "https://github.com/sonjiku/pythiarg/wiki"
"Source" = "https://github.com/sonjiku/pythiarg.git"
"Issues" = "https://github.com/sonjiku/pythiarg/issues"
"Changelog" = "https://github.com/sonjiku/pythiarg/blob/main/CHANGELOG.md"

[project.scripts]
pythiarg = "pythiarg:main"

# [project.entry-points."spam.magical"]
# tomatoes = "spam:main_tomatoes"

[tool.setuptools_scm]

[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]
